fixing-spacing

--- a/src/view/pages/home/main/hometabs/home-tabs.scss
+++ b/src/view/pages/home/main/hometabs/home-tabs.scss
@@ -1,8 +1,8 @@
 .homebar-main {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    margin: 2rem auto .5rem auto;
+    justify-content: space-between;
+    margin: 1rem auto 0 auto;
     width: 340px;
     height: 24px;
     font-weight: 600;
